# water-sort-player

./: .gitignore  1776606435_discovery_moves.json  Cargo.toml  build.rs  connect_to_emulator.sh  run_out  setup.ps1  setup.sh  start_scrcpy.sh  test_out
.github/: copilot-instructions.md
.github/workflows/: ci.yml
captures/: discovery_levels.json
crates/fps-measure/: Cargo.toml
crates/fps-measure/src/: main.rs
crates/water-sort-capture/: Cargo.toml
crates/water-sort-capture/src/: capture.rs  lib.rs
crates/water-sort-core/: Cargo.toml  bottle_detection.py  build.rs  empty_bottle_color_detection.py
crates/water-sort-core/assets/: layout.json  layout.schema.json
crates/water-sort-core/src/: constants.rs  lib.rs  position.rs
crates/water-sort-core/src/bottles/: detection.rs  empty_bottle_color_detection.rs  layout.rs  mod.rs  test_utils.rs
crates/water-sort-core/src/bottles/specific_tests/: detection.rs  functional.rs
crates/water-sort-device/: Cargo.toml
crates/water-sort-device/src/: common.rs  lib.rs  linux.rs  scrcpy.rs  server.rs  video_decoder.rs  windows.rs
crates/water-sort-discovery-solver/: Cargo.toml
crates/water-sort-discovery-solver/src/: main.rs
crates/water-sort-image-debugger/: Cargo.toml
crates/water-sort-image-debugger/src/: main.rs
crates/water-sort-measure/: Cargo.toml
crates/water-sort-measure/src/: main.rs
crates/water-sort-player/: Cargo.toml  build.rs
crates/water-sort-player/src/: app.rs  app_visualization.rs  level_tests.rs  main.rs
crates/water-sort-player/src/app/: frame_stability.rs  save_states.rs
crates/water-sort-solver/: Cargo.toml
crates/water-sort-solver/src/: discovery.rs  lib.rs  visualization.rs
src/: app.rs  app_visualization.rs  bottles.rs  capture.rs  constants.rs  fps_measure.rs  main.rs  position.rs  scrcpy.rs  shutdown.rs
src/bottles/: layout.rs  mod.rs  test_utils.rs  tests.rs
src/bottles/specific_tests/: detection.rs  functional.rs  mod.rs
src/level_tests/: mod.rs
src/solver/: discovery.rs  mod.rs  tests.rs  visualization.rs
