[package]
name = "water-sort-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
lazy_static = "1.5.0"
minifb = { git = "https://github.com/emoon/rust_minifb", branch = "wayland-upgrade-2" }
image = "0.25.8"
opencv = { version = "0.98.2", features = ["videoio", "imgproc"] }
paste = "1.0.15"
serde_json = "1.0.145"
ctrlc = "3.5.1"

[features]
discovery-debugging = []
collect-test-data = []

[build-dependencies]
serde_json = "1.0.145"