[package]
name = "water-sort-core"
version = "0.1.0"
edition = "2024"
build="build.rs"

[dependencies]
lazy_static = { workspace = true }
opencv = { workspace = true }
paste = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
test-log = { workspace = true }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
