[package]
name = "water-sort-device"
version = "0.1.0"
edition = "2024"

[dependencies]
water-sort-core = { path = "../water-sort-core" }
anyhow = { workspace = true }
ctrlc = { workspace = true }
lazy_static = { workspace = true }
opencv = { workspace = true }

[target.'cfg(windows)'.dependencies]
win-screenshot = "4.0.14"