[package]
name = "water-sort-player"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
minifb = { workspace = true }
opencv = { workspace = true }
paste = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
water-sort-core = { path = "../water-sort-core" }
water-sort-device = { path = "../water-sort-device" }
water-sort-solver = { path = "../water-sort-solver" }
water-sort-capture = { path = "../water-sort-capture" }
test-log = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true }

[features]
default = ["solver-visualization"]
solver-visualization = ["water-sort-solver/solver-visualization"]
discovery-debugging = ["water-sort-solver/discovery-debugging"]
collect-test-data = ["water-sort-capture/collect-test-data"]
save-states = ["water-sort-solver/save-states"]

[build-dependencies]
serde_json = { workspace = true }
