[package]
name = "water-sort-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
water-sort-core = { path = "../water-sort-core" }
water-sort-device = { path = "../water-sort-device" }
opencv = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
test-log = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }

[features]
discovery-debugging = []
solver-visualization = []
save-states = []